# agente-inteligente-comercial

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/classification/: rules.py
app/crm/: base.py  fake.py  http.py  port.py
app/db/: base.py  models.py
app/dedup/: matcher.py  merge.py  pool.py
app/enrichment/: google_places.py  paginas_amarillas.py  pipeline.py  web_scraper.py
app/ingestion/: column_mapper.py  excel_parser.py  historical.py  pipeline.py
app/integrations/: __init__.py  monitor.py
app/normalization/: address.py  name.py  phone.py  rut.py  website.py
app/prospecting/: __init__.py  budget.py  contracts.py  dedup.py  evidence.py  retention.py  scoring.py  sources.py  store.py  validation.py  worker.py
app/scheduler/: worker.py
app/web/: deps.py  regions.py  routes_dedup.py  routes_import.py  routes_monitor.py  routes_prospects.py  routes_search.py
docs/: crm_api_notes.md  scoring_rubric.md
docs/sql/: README.md  (+3 more)
scripts/: crm_discovery_spike.py  render_preview.py  seed_regions_comunas.py
tests/: conftest.py  test_authorized_sources.py  test_brave_usage_reconciliation.py  test_contracts_and_expansion.py  test_fake_crm.py  test_google_budget.py  test_google_places_connection.py  test_historical_import.py  test_http_crm.py  test_integration_monitor.py  test_migrations.py  test_phone_normalization.py  test_prospecting_dedup.py  test_quality_gate.py  test_retention.py  test_secure_web_scraper.py  test_web_surface.py  test_worker.py  test_worker_entrypoint.py
(+17 files in other folders)
