[project]
name = "clima-activa-agent"
version = "0.1.0"
description = "Agente de Inteligencia Comercial - Clima Activa (mercado chileno de climatizacion y refrigeracion)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.17",
    "itsdangerous>=2.2",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "rapidfuzz>=3.10",
    "phonenumbers>=8.13",
    "tldextract>=5.1",
    "unidecode>=1.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
